--- a/hr-policy.html
+++ b/hr-policy.html
@@ -13,7 +13,7 @@
     <nav>
       <div class="brand"><div class="logo" aria-hidden="true">🔒</div> <span>Admin</span></div>
       <div class="nav-links">
-        <a href="/">Home</a>
+        <a href="../index.html">Home</a>
         <span class="small">This area is private (not linked).</span>
       </div>
     </nav>
@@ -48,7 +48,7 @@ document.getElementById('saveBtn').addEventListener('click', function(){
   <div class="container">
     <nav>
       <div class="brand"><div class="logo" aria-hidden="true">🔒</div> <span>Admin</span></div>
-      <div class="nav-links"><a href="/">Home</a></div>
+      <div class="nav-links"><a href="../index.html">Home</a></div>
     </nav>
   </div>
 </header>
