--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <nav>
       <div class="brand"><div class="logo" aria-hidden="true">🎓</div> <span>KGen</span></div>
       <div class="nav-links">
-        <a href="/">Home</a>
-        <a href="/products.html">Products</a>
+        <a href="index.html">Home</a>
+        <a href="products.html">Products</a>
       </div>
     </nav>
   </div>
@@ -25,7 +25,7 @@
     <p class="lead">KGen is an education consultancy that provides products and solutions designed to deliver better outcomes for schools. We partner with leaders and teachers to improve attendance, streamline HR processes, and enhance day‑to‑day operations.</p>
     <p>Explore our products, or contact us to discuss tailored support for your school.</p>
     <p>
-      <a class="btn primary" href="/products.html">View Products</a>
+      <a class="btn primary" href="products.html">View Products</a>
     </p>
   </section>
 </main>
