--- a/products.html
+++ b/products.html
@@ -13,8 +13,8 @@
     <nav>
       <div class="brand"><div class="logo" aria-hidden="true">🎓</div> <span>KGen</span></div>
       <div class="nav-links">
-        <a href="/">Home</a>
-        <a href="/products.html">Products</a>
+        <a href="index.html">Home</a>
+        <a href="products.html">Products</a>
       </div>
     </nav>
   </div>
