--- a/products.html
+++ b/products.html
@@ -35,6 +35,8 @@
       <p class="small">Track progress, plan interventions, and share insights with stakeholders.</p>
     </a>
     <a class="tile" href="#" aria-label="Product Four details">
+      <iframe src="https://docsbot.ai/iframe/OXXlQWOxPHphYRTcj75r/blx3CoGfJ3oUAcNVgtfS" width="600" height="650" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
+      
       <h3>Safeguard Assist</h3>
       <p class="small">Guided workflows and policy checks to strengthen safeguarding practice.</p>
     </a>
