--- a/products.html
+++ b/products.html
@@ -35,8 +35,10 @@
       <p class="small">Track progress, plan interventions, and share insights with stakeholders.</p>
     </a>
     <a class="tile" href="#" aria-label="Product Four details">
-      <iframe src="https://docsbot.ai/iframe/OXXlQWOxPHphYRTcj75r/blx3CoGfJ3oUAcNVgtfS" width="600" height="650" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
-      
+      <script type="text/javascript">window.DocsBotAI=window.DocsBotAI||{},DocsBotAI.init=function(e){return new Promise((t,r)=>{var n=document.createElement("script");n.type="text/javascript",n.async=!0,n.src="https://widget.docsbot.ai/chat.js";let o=document.getElementsByTagName("script")[0];o.parentNode.insertBefore(n,o),n.addEventListener("load",()=>{let n;Promise.all([new Promise((t,r)=>{window.DocsBotAI.mount(Object.assign({}, e)).then(t).catch(r)}),(n=function e(t){return new Promise(e=>{if(document.querySelector(t))return e(document.querySelector(t));let r=new MutationObserver(n=>{if(document.querySelector(t))return e(document.querySelector(t)),r.disconnect()});r.observe(document.body,{childList:!0,subtree:!0})})})("#docsbotai-root"),]).then(()=>t()).catch(r)}),n.addEventListener("error",e=>{r(e.message)})})};</script>
+<script type="text/javascript">
+  DocsBotAI.init({id: "OXXlQWOxPHphYRTcj75r/blx3CoGfJ3oUAcNVgtfS"});
+</script>
       <h3>Safeguard Assist</h3>
       <p class="small">Guided workflows and policy checks to strengthen safeguarding practice.</p>
     </a>
