Update hrh-policy.html with HT staff policy

--- a/admin/hrh-policy.html
+++ b/admin/hrh-policy.html
@@ -24,123 +24,81 @@
     <h1>HR Policy</h1>
     <div class="content">
       <!-- START: paste your HR policy text below this line -->
-      Human Resources Policy
-Approved by: Trust Board
-Applies to: All schools and central services within KGen Trust (Test)
-Review cycle: Annual
-Version: 1.0
- 
-1. Purpose and Scope
-This policy sets out the principles, standards, and processes governing the management of employees across KGen Trust (Test). 
-It ensures that employment practices are fair, legally compliant, and consistent with the Department for Education (DfE) Staffing and Employment Guidance for Schools (2025), 
-and align with the Trust’s mission to provide a high-quality education through effective, empowered, and motivated people. 
-The policy applies to all Trust employees, including permanent, temporary, and fixed-term staff. It also applies to supply, agency, and contractor personnel where appropriate.
-
-2. Legal and Regulatory Framework
-KGen Trust (Test) complies with relevant employment and education legislation, including:
-- Employment Rights Act 1996
-- Equality Act 2010
-- Maternity and Parental Leave Regulations 1999
-- Data Protection Act 2018 / UK GDPR
-- Health and Safety at Work Act 1974
-- Keeping Children Safe in Education (KCSIE) 2025
-- DfE Staffing and Employment Guidance for Schools (September 2025)
-- Academy Trust Handbook (ESFA 2025)
-The Trust also meets obligations under the Public Sector Equality Duty (s.149 Equality Act 2010).
-
-3. Policy Objectives
-The HR Policy aims to:
-- Support the delivery of the HR Service Catalogue by providing a legal and procedural framework for implementation.
-- Ensure compliance with statutory employment legislation and DfE expectations.
-- Promote fairness, equity, and transparency in employment decisions.
-- Provide clear expectations and standards for HR service delivery across the Trust.
-- Enable effective people management through good governance, accountability, and communication.
-
-4. Governance and Responsibilities
-| Role | Responsibility |
-|------|----------------|
-| Trust Board | Approves HR policy and monitors compliance. |
-| CEO / Executive Team | Ensures strategic implementation across the Trust. |
-| Director of People | Owns and maintains this policy, ensuring alignment with legislation and DfE guidance. |
-| HR Business Partners | Provide operational support, advisory services, and performance monitoring. |
-| Principals / Headteachers | Ensure consistent policy implementation at academy level. |
-| Line Managers | Apply HR processes fairly and consistently. |
-| All Employees | Comply with this policy and Trust procedures. |
-
-5. HR Service Domains and Standards
-Aligned with the HR Service Catalogue, KGen Trust (Test) operates across eight key domains:
-
-**5.1 Recruitment & Onboarding**
-- Safer Recruitment in line with KCSIE 2025.
-- Transparent advertising and fair selection.
-- Full induction and safeguarding training within 10 days of joining.
-- Probation reviews at 3 and 6 months.
-
-**5.2 Employment Lifecycle**
-- Written contracts and prompt variation management.
-- Absence, performance, and ER cases managed per Trust policy.
-- Formal exit and leaver process including exit interviews.
-
-**5.3 Payroll, Reward & Benefits**
-- Payroll accuracy assured through collaboration with Finance.
-- Pay Policy aligned to STPCD and NJC terms.
-- Pensions via TPS and LGPS schemes.
-- EAP and wellbeing initiatives available Trust-wide.
-
-**5.4 Family Leave (Maternity, Paternity, Adoption, SPL)**
-- 52 weeks’ maternity leave (26 ordinary + 26 additional).
-- Statutory and Occupational Maternity Pay applied per eligibility.
-- Notification required by the 15th week before expected childbirth.
-- Risk assessments for pregnant employees conducted promptly.
-- Two weeks’ statutory paternity leave available.
-- Adoption leave mirrors maternity provisions.
-- Shared Parental Leave up to 50 weeks (37 weeks paid) available.
-- Parental Bereavement Leave available (2 weeks).
-
-**5.5 Compliance & Safeguarding**
-- SCR maintained and updated daily.
-- Compliance with Equality, H&S, and Data Protection laws.
-
-**5.6 HR Systems & Data**
-- HR records managed securely in line with GDPR.
-- Monthly data reporting and workforce analytics.
-
-**5.7 Learning, Development & Performance**
-- Annual appraisals aligned to Trust priorities.
-- CPD Catalogue for professional development.
-- Succession planning supported across schools.
-
-**5.8 Strategic HR & Organisational Design**
-- HR supports workforce planning, restructures, and change.
-- Consultation per ACAS and DfE guidance with equality impact analysis.
-
-6. Monitoring and Performance
-HR performance monitored through monthly KPIs (turnover, absence, recruitment) and quarterly reporting to the Trust Board. 
-Annual HR Service Review ensures compliance with the Service Catalogue and DfE standards.
-
-7. Policy Review and Updates
-This policy is reviewed annually by the Director of People and approved by the Trust Board. 
-It may be reviewed earlier following legislative or organisational changes.
-
-8. Related Policies and Documents
-- HR Service Catalogue
-- Safer Recruitment Policy
-- Pay Policy (Teachers & Support Staff)
-- Performance Management Policy
-- Attendance Management Policy
-- Capability, Grievance & Disciplinary Policies
-- Family Leave Policy
-- Equality & Diversity Policy
-- Data Protection Policy
-- Safeguarding & Child Protection Policy
-
-9. Approval
-| Role | Name | Signature | Date |
-|------|------|------------|------|
-| Chair of Trustees | | | |
-| Chief Executive Officer | | | |
-| Director of People | | | |
-
+      7.2 Staff attendance
+7.2.1 Employment – Hours of Work
+Please note that the key policy guidance documents and routine procedures you need to read for this
+section are:
+• School Teachers Pay and Conditions Document
+• Offer of employment
+• Contract of Employment and subsequent agreed amendments
+• Directed Time model – TMR and UPR teaching staff
+• Overtime / out of hours work
+What is contained within this handbook is a summary of the most commonly referred to points and is
+not a replacement for the above documents, all of which staff need to be familiar with. Hours of
+work are individual to each member of staff and the offer of employment and contract of
+employment will outline the weekly hours for which each individual is paid.
+7.2.2 Directed Time – Teaching Staff
+This is the means by which the Executive Headteacher will direct how the 1265 hours for those on
+teaching contracts will be worked over the 195-day period.
+In line with the School Teachers' Pay and Conditions Document (STPCD) it is important to note that a
+teacher must work such reasonable additional hours (outside the 1265) as may be necessary to
+enable the effective discharge of the teacher’s professional duties. In particular, this includes
+planning and preparing courses and lessons; and assessing, monitoring, recording and reporting on
+the learning needs, progress and achievements of assigned pupils.
+At the Holy Trinity school we do not determine how many of the additional hours referred to must
+be worked or when these hours must be worked. We do expect all teaching colleagues to be
+diligently professional and work with a spirit that upholds our school values.
+For the year 2025-2026-2025 West Sussex have set a school calendar which allocates 195 days. The
+Directed Time model for 2025-2026 and some guidance for part time staff is as below:
+Directed Time Model for 2025-2026 Days/
+Allocated Time Total Hours
+Weeks
+Registration/Assembly – Start of Day 190 days 25 minutes 79.17
+Duties (3 x 15 minutes duties per week) 38 weeks 45 minutes 28.50
+Teaching time / Coaching / Curriculum development
+time /CPD
+38 weeks 22 hours 30
+minutes
+855.00
+Planning, Preparation & Assessment (PPA) 38 weeks 2 hours 30
+minutes
+95.00
+Supervisory duties (10 minutes before school and 15
+minutes after school each day)
+190 days 25 minutes* 79.17
+Behaviour Detentions (see below for details of
+allocation)
+Over the year 2 hours 2.00
+The following are all recorded by LoL on the ‘Staffing for key DT Events’ spreadsheet in OneDrive
+8
+The Holy Trinity C of E Secondary School Staff Handbook - Section 7 – September 2025
+INSET days (8:35 am to 3:25 pm) 3 days 5 hours 50
+minutes
+17.50
+Devolved INSET days (8:35 am to 3:25 pm) ** 2 days 5 hours 50
+minutes
+11.66
+Tuesday Meetings 26 evenings 1 hour 30
+minutes
+39.00
+Parents Evenings 5 evenings* 3 hours 30
+minutes
+17.50
+Year 6 Open Evening – 24th September***** 1 evening 6.5 hours***** 6.50
+Sixth Form Open Evening 9th October*** 1 evening 4 hours 4.00
+Year 9 Options Evening – 22nd January**** 1 evening 2.5 hours 2.50
+End of Year Celebration Events****** 1 evening 3 hours 3.00
+Intervention (under the direction of Subject Leader
+e.g. after school revision class)
+14 evenings 1 hour 14.00
+Additional Tutor Time for meetings with
+parents*******
+According to
+need
+6 hours 6.00
+Contingency 4.50
+1265:00
+9
 
 
       <!-- END -->
