Update hrh-policy.html with staff recruitment

--- a/admin/hrh-policy.html
+++ b/admin/hrh-policy.html
@@ -24,6 +24,83 @@
     <h1>HR Policy</h1>
     <div class="content">
       <!-- START: paste your HR policy text below this line -->
+      SECTION 7
+STAFF PROCEDURES & EMPLOYMENT DETAILS
+7.1 Staff Recruitment
+7.1.1 Introduction
+Good recruitment is vital for every organisation - finding the right people for the right roles at the
+right time. It ensures that the workforce has the relevant skills and abilities for the organisation's
+current and future needs. Effective resourcing is not just about filling an immediate vacancy but
+about having an impact on long-term success.
+7.1.2 What is recruitment?
+Recruitment involves attracting and selecting individuals into a job role. Recruiting the right
+individual is crucial for organisations who need people with the right skills and capabilities to deliver
+their goals.
+By following the recruitment process below, we can ensure consistency across the organisation
+whilst adhering to the policies and procedures set out i.e. safer recruitment, etc.
+7.1.3 Recruitment process
+Please follow the recruitment process below:
+Should you have any questions about this process please ask Jessica Knight, who will be happy to
+advise. 
+1 •Vacancy & recruitment decision required.
+•Responsibility - Executive Leadership Team
+2. •Budget approval obtained for new post.
+•Responsibility - Exec Head
+3.•Draw up advert, job description & person specification. Agree advertising, closing and
+interview dates (liaise with Executive Leadership Teams PA for availability in the Executive
+Head and Head of School's diary and the Cover Team to ensure cover can be accommodated.
+Submit Absence Request
+•N.B. The minimum time between closing date and interview date should be at least 10
+working days in order to shortlist, invite candidate and obtain references.
+•Responsibility - LoL
+4. •Final recruitment approval.
+•Responsibility - Head of School
+5. •LoL to pass advert, Job description and Person specification to Jess Knight
+•Advertisements placed.
+•Responsibility - JKT
+6. •Applications received and sent to LoL and relevant others for shortlisting. This will be a folder
+in One Drive shared by JKT
+•Responsibility - JKT
+7. •LoL and relevant line manager to shortlist using the shortlisting scoring sheets which will be
+provided in the OneDrive folder to agree on candidates to be invited for interview.
+•Responsibility - LoL
+8. •LoL to pass lesson observation details, if appropriate, to JKT for scheduling and invitation
+letter.
+•Draw up interview timetable, student panel, tour, data task, teaching and learning interview
+and main panel interview (as appropriate); arrange lunches and book rooms.
+•Responsibility - JKT
+9. •Candidates to be sent an invitation letter. Candidates should not be invited prior to 08:45am,
+15 minutes should be allowed for documentation checks.
+•Responsibility - JKT
+10. •Reference requests sent (these will only be available to the shortlisting panel if all references for
+all candidates have been received).
+•Responsibility - JKT
+11. •Once candidates have accepted invitations, communicate timetable and tasks to all relevant
+parties. Advise Reception that visitors will be coming in to the school on a red lanyard. Ensure
+reasonable adjustments are adequately in place if required (from application form).
+•Responsibility - JKT
+12. •Interview process.
+•Any references received should be sent to the appointed person for the Safer Recruitment aspect
+of the interview including the Safer Recruitment form – Part 1 (JKT)
+•Responsibility - All involved
+13. •Conditional appointment made verbally subject to agreement of employment details and pre-
+employment checks. Advise unsuccessful applicants. Advise HR of decision.
+•Responsibility - Lead Interviewer
+14. •Confirmation of employment package to be offered (to include salary, contractual terms and
+conditions).
+•Responsibility - JKT
+15. •Written offer of employment made.
+•Responsibility - JKT
+16. •Offer of employment accepted.
+•Responsibility - Candidate
+17. •All paperwork to be scanned to OneDrive folder and returned to CEL to either be entered on to
+One Drive or destroyed.
+•Responsibility - All involved / JKT
+18. •Employment starts. LoL to advise JKT of arrangements for the candidates first day in school so this
+can be communicated.
+•N.B. We expect new candidates to have time to watch the new staff induction videos on their first
+day in school, so please ensure time is allocated for this.
+•Responsibility - LoL / JKT
       7.2 Staff attendance
 7.2.1 Employment – Hours of Work
 Please note that the key policy guidance documents and routine procedures you need to read for this
