Update hrh-policy.html with embedded forms

--- a/admin/hrh-policy.html
+++ b/admin/hrh-policy.html
@@ -444,7 +444,8 @@ In all cases you must consult with your Leader of Learning (Teaching staff) or L
 staff) before arranging any planned absence and before making a formal request. All requests for
 planned absences or ‘keep free’ time MUST be made via the electronic online absence request form.
 All forms, once submitted to Cover, are sent to the Head of School for approval.
-The link to this electronic form is Absence Request Form
+The link to this electronic form is <a href="https://teams.microsoft.com/l/entity/81fef3a6-72aa-4648-a763-de824aeafb7d/_djb2_msteams_prefix_271191390?context=%7B%22channelId%22%3A%2219%3A4cd84b20e30c4a5a9833a99680cba972%40thread.tacv2%22%7D&tenantId=6cb466a9-2c53-4d33-b743-fe244531ed8f" target="_blank">Visit our website</a>
+
 Requests for exceptional absences e.g. a request for absence in term time, a longer-term absence for
 medical needs, special leave for family issues, jury service, etc. would require an appointment to be
 made with the Head of School to discuss prior to submission of your absence request.
