--- a/products.html
+++ b/products.html
@@ -15,6 +15,7 @@
       <div class="nav-links">
         <a href="index.html">Home</a>
         <a href="products.html">Products</a>
+        <a href="/log.html">Log</a>
       </div>
     </nav>
   </div>
