Update and rename log.html to holy-trinity.html

--- a/holy-trinity.html
+++ b/holy-trinity.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KGen • Project Log</title>
+  <title>KGen • Holy Trinity</title>
   <meta name="description" content="Project log, updates, milestones, and tasks for KGen." />
   <!-- If your site has a main stylesheet, keep this link -->
   <link rel="stylesheet" href="/style.css" />
@@ -34,7 +34,7 @@
   </header>
 
   <main class="container" id="main">
-    <h1>Project Log</h1>
+   <h1>Holy Trinity</h1>
     <p class="sr-only">This page tracks updates, milestones, and open tasks for the KGen project.</p>
 
     <section aria-labelledby="overview">
