--- a/holy-trinity.html
+++ b/holy-trinity.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>KGen • Holy Trinity</title>
-  <meta name="description" content="Project log, updates, milestones, and tasks for KGen." />
-  <!-- If your site has a main stylesheet, keep this link -->
+  <meta name="description" content="An easy-to-read overview of the Holy Trinity with key sections and a simple change log." />
+  <!-- Keep your global stylesheet & favicon so styling matches other pages -->
   <link rel="stylesheet" href="/style.css" />
   <link rel="icon" href="/assets/favicon.ico" />
+  <!-- Optional tiny helpers (safe if your style.css already covers this) -->
   <style>
-    /* Optional lightweight styles if style.css is minimal */
     .container { max-width: 960px; margin: 0 auto; padding: 1rem; }
     .site-header, .site-footer { border-bottom: 1px solid #eee; }
     .site-footer { border-top: 1px solid #eee; border-bottom: 0; }
@@ -22,32 +22,55 @@
   </style>
 </head>
 <body>
+  <!-- HEADER (copy your exact header from index.html if classes differ) -->
   <header class="site-header">
     <div class="container">
       <a class="logo" href="/index.html">KGen</a>
       <nav class="site-nav" aria-label="Primary">
         <a href="/index.html">Home</a>
         <a href="/products.html">Products</a>
-        <a href="/log.html" aria-current="page">Log</a>
+        <a href="/holy-trinity.html" aria-current="page">Holy Trinity</a>
       </nav>
     </div>
   </header>
 
+  <!-- PAGE CONTENT -->
   <main class="container" id="main">
-   <h1>Holy Trinity</h1>
-    <p class="sr-only">This page tracks updates, milestones, and open tasks for the KGen project.</p>
+    <h1>Holy Trinity</h1>
+    <p class="sr-only">This page uses the same layout and styling as the rest of the site.</p>
 
+    <!-- Specific headings you asked for; tweak the text as you like -->
     <section aria-labelledby="overview">
       <h2 id="overview">Overview</h2>
-      <p>Central place for project updates, releases, and notes across the KGen site.</p>
+      <p>
+        A concise, beginner-friendly overview of the Holy Trinity. Use this section for a short intro paragraph or two.
+      </p>
     </section>
 
-    <section aria-labelledby="latest">
-      <h2 id="latest">Latest Update</h2>
-      <p><strong>Date:</strong> <!-- update this --> 2025-11-12<br>
-         <strong>Summary:</strong> Initial log page created and linked in the site nav.</p>
+    <section aria-labelledby="doctrine">
+      <h2 id="doctrine">Doctrine Summary</h2>
+      <ul>
+        <li>One God in three Persons</li>
+        <li>Father, Son, and Holy Spirit</li>
+        <li>Co-equal, co-eternal, consubstantial</li>
+      </ul>
     </section>
 
+    <section aria-labelledby="biblical-basis">
+      <h2 id="biblical-basis">Biblical Basis</h2>
+      <p>
+        Add key references or a short list of passages you want to highlight.
+      </p>
+    </section>
+
+    <section aria-labelledby="history">
+      <h2 id="history">Historical Notes</h2>
+      <p>
+        Brief historical context (councils, creeds, or influential theologians), if you want it here.
+      </p>
+    </section>
+
+    <!-- You wanted a log on the page as well -->
     <section aria-labelledby="changelog">
       <h2 id="changelog">Change Log</h2>
       <table role="table" aria-describedby="changelog-caption">
@@ -64,43 +87,12 @@
           <!-- Copy a row to add new entries -->
           <tr>
             <td>2025-11-12</td>
-            <td>Created <code>log.html</code> page and added “Log” to navigation.</td>
+            <td>Created Holy Trinity page with matching site formatting.</td>
             <td><span class="tag">Docs</span></td>
-            <td>your-name</td>
-          </tr>
-          <!-- Example entries you can remove -->
-          <tr>
-            <td>2025-11-10</td>
-            <td>Updated products listing layout.</td>
-            <td><span class="tag">UI</span></td>
-            <td>your-name</td>
-          </tr>
-          <tr>
-            <td>2025-11-05</td>
-            <td>Fixed broken link in header logo.</td>
-            <td><span class="tag">Fix</span></td>
             <td>your-name</td>
           </tr>
         </tbody>
       </table>
-    </section>
-
-    <section aria-labelledby="milestones">
-      <h2 id="milestones">Milestones</h2>
-      <ul>
-        <li>[Done] Initial site setup</li>
-        <li>[In progress] Products page enhancements</li>
-        <li>[Planned] Add FAQ and search</li>
-      </ul>
-    </section>
-
-    <section aria-labelledby="tasks">
-      <h2 id="tasks">Open Tasks</h2>
-      <ul>
-        <li>Write basic contribution guide</li>
-        <li>Add accessibility pass (ARIA, contrast, focus states)</li>
-        <li>Compress hero images</li>
-      </ul>
     </section>
 
     <section aria-labelledby="contact">
@@ -109,11 +101,13 @@
     </section>
   </main>
 
+  <!-- FOOTER (copy your exact footer from index.html if classes differ) -->
   <footer class="site-footer">
     <div class="container">
       <small>© <span id="year"></span> KGen. All rights reserved.</small>
     </div>
     <script>
+      // Keep your usual footer script(s)
       document.getElementById('year').textContent = new Date().getFullYear();
     </script>
   </footer>
