--- a/holy-trinity.html
+++ b/holy-trinity.html
@@ -1,25 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KGen • Holy Trinity</title>
-  <meta name="description" content="An easy-to-read overview of the Holy Trinity with key sections and a simple change log." />
-  <!-- Keep your global stylesheet & favicon so styling matches other pages -->
-  <link rel="stylesheet" href="/style.css" />
-  <link rel="icon" href="/assets/favicon.ico" />
-  <!-- Optional tiny helpers (safe if your style.css already covers this) -->
-  <style>
-    .container { max-width: 960px; margin: 0 auto; padding: 1rem; }
-    .site-header, .site-footer { border-bottom: 1px solid #eee; }
-    .site-footer { border-top: 1px solid #eee; border-bottom: 0; }
-    .site-nav a { margin-right: 1rem; text-decoration: none; }
-    table { width: 100%; border-collapse: collapse; margin: 1rem 0; }
-    th, td { border: 1px solid #ddd; padding: .6rem; text-align: left; }
-    th { background: #fafafa; }
-    .tag { display: inline-block; padding: .15rem .5rem; border: 1px solid #ccc; border-radius: .5rem; font-size: .85rem; }
-    .sr-only { position: absolute; left: -10000px; top: auto; width: 1px; height: 1px; overflow: hidden; }
-  </style>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>KGen — Products & Services</title>
+<link rel="stylesheet" href="assets/style.css">
+<meta name="description" content="KGen is an education consultancy providing products and solutions that deliver better outcomes for schools.">
 </head>
 <body>
   <!-- HEADER (copy your exact header from index.html if classes differ) -->
