--- a/holy-trinity.html
+++ b/holy-trinity.html
@@ -8,17 +8,13 @@
 <meta name="description" content="KGen is an education consultancy providing products and solutions that deliver better outcomes for schools.">
 </head>
 <body>
-  <!-- HEADER (copy your exact header from index.html if classes differ) -->
-  <header class="site-header">
-    <div class="container">
-      <a class="logo" href="/index.html">KGen</a>
-      <nav class="site-nav" aria-label="Primary">
-        <a href="/index.html">Home</a>
-        <a href="/products.html">Products</a>
-        <a href="/holy-trinity.html" aria-current="page">Holy Trinity</a>
-      </nav>
-    </div>
-  </header>
+  <head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>KGen — Products & Services</title>
+<link rel="stylesheet" href="assets/style.css">
+<meta name="description" content="KGen is an education consultancy providing products and solutions that deliver better outcomes for schools.">
+</head>
 
   <!-- PAGE CONTENT -->
   <main class="container" id="main">
