--- a/holy-trinity.html
+++ b/holy-trinity.html
@@ -83,8 +83,7 @@
     </section>
   </main>
 
-  <!-- FOOTER (copy your exact footer from index.html if classes differ) -->
-  <footer class="site-footer">
+ <footer><div class="container">© <span id="year"></span> KGen</div></footer>
     <div class="container">
       <small>© <span id="year"></span> KGen. All rights reserved.</small>
     </div>
