--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>KGen — Products & Services</title>
+<title>...Holy Trinity...</title>
 <link rel="stylesheet" href="assets/style.css">
 <meta name="description" content="KGen is an education consultancy providing products and solutions that deliver better outcomes for schools.">
 </head>
@@ -15,14 +15,14 @@
       <div class="nav-links">
         <a href="index.html">Home</a>
         <a href="products.html">Products</a>
-        <a href="/log.html">Log</a>
+       <a href="/holy-trinity.html">Holy Trinity</a>
       </div>
     </nav>
   </div>
 </header>
 <main class="container">
   <section class="card">
-    <h1>KGen — Products & Services</h1>
+   <h1>Holy Trinity</h1>
     <p class="lead">KGen is an education consultancy that provides products and solutions designed to deliver better outcomes for schools. We partner with leaders and teachers to improve attendance, streamline HR processes, and enhance day‑to‑day operations.</p>
     <p>Explore our products, or contact us to discuss tailored support for your school.</p>
     <p>
