--- a/holy-trinity.html
+++ b/holy-trinity.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>KGen — Products & Services</title>
+<title>KGen • Holy Trinity</title>
 <link rel="stylesheet" href="assets/style.css">
 <meta name="description" content="KGen is an education consultancy providing products and solutions that deliver better outcomes for schools.">
 </head>
@@ -48,15 +48,15 @@
     <section aria-labelledby="history">
       <h2 id="history">Historical Notes</h2>
       <p>
-        Brief historical context (councils, creeds, or influential theologians), if you want it here.
+        Brief historical context (councils, creeds, or influential theoHoly Trinityians), if you want it here.
       </p>
     </section>
 
-    <!-- You wanted a log on the page as well -->
-    <section aria-labelledby="changelog">
-      <h2 id="changelog">Change Log</h2>
-      <table role="table" aria-describedby="changelog-caption">
-        <caption id="changelog-caption" class="sr-only">Chronological list of updates</caption>
+    <!-- You wanted a Holy Trinity on the page as well -->
+    <section aria-labelledby="changeHoly Trinity">
+      <h2 id="changeHoly Trinity">Change Holy Trinity</h2>
+      <table role="table" aria-describedby="changeHoly Trinity-caption">
+        <caption id="changeHoly Trinity-caption" class="sr-only">ChronoHoly Trinityical list of updates</caption>
         <thead>
           <tr>
             <th scope="col">Date</th>
