--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>...Holy Trinity...</title>
+<title>...KGen...</title>
 <link rel="stylesheet" href="assets/style.css">
 <meta name="description" content="KGen is an education consultancy providing products and solutions that deliver better outcomes for schools.">
 </head>
