--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </header>
 <main class="container">
   <section class="card">
-   <h1>Holy Trinity</h1>
+   <h1>KGen</h1>
     <p class="lead">KGen is an education consultancy that provides products and solutions designed to deliver better outcomes for schools. We partner with leaders and teachers to improve attendance, streamline HR processes, and enhance day‑to‑day operations.</p>
     <p>Explore our products, or contact us to discuss tailored support for your school.</p>
     <p>
