--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="nav-links">
         <a href="index.html">Home</a>
         <a href="products.html">Products</a>
-       <a href="/holy-trinity.html">Holy Trinity</a>
+       <a href="holy-trinity.html">Holy Trinity</a>
       </div>
     </nav>
   </div>
