--- a/holy-trinity.html
+++ b/holy-trinity.html
@@ -3,95 +3,62 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>KGen • Holy Trinity</title>
+<title>Holy Trinity - KGen</title>
 <link rel="stylesheet" href="assets/style.css">
-<meta name="description" content="KGen is an education consultancy providing products and solutions that deliver better outcomes for schools.">
+<meta name="description" content="An overview of the Holy Trinity.">
 </head>
 <body>
-  <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>KGen — Products & Services</title>
-<link rel="stylesheet" href="assets/style.css">
-<meta name="description" content="KGen is an education consultancy providing products and solutions that deliver better outcomes for schools.">
-</head>
 
-  <!-- PAGE CONTENT -->
-  <main class="container" id="main">
-    <h1>Holy Trinity</h1>
-    <p class="sr-only">This page uses the same layout and styling as the rest of the site.</p>
+<!-- HEADER (exact same as home page) -->
+<header>
+  <div class="container">
+    <h1>KGen</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="products.html">Products</a>
+      <a href="holy-trinity.html" aria-current="page">Holy Trinity</a>
+    </nav>
+  </div>
+</header>
 
-    <!-- Specific headings you asked for; tweak the text as you like -->
-    <section aria-labelledby="overview">
-      <h2 id="overview">Overview</h2>
-      <p>
-        A concise, beginner-friendly overview of the Holy Trinity. Use this section for a short intro paragraph or two.
-      </p>
-    </section>
+<!-- MAIN CONTENT (this is the ONLY part that is different) -->
+<main class="container">
+  <h2>Holy Trinity</h2>
+  <p>
+    The Holy Trinity refers to the Christian belief in one God in three Persons:
+    the Father, the Son (Jesus Christ), and the Holy Spirit.
+  </p>
 
-    <section aria-labelledby="doctrine">
-      <h2 id="doctrine">Doctrine Summary</h2>
-      <ul>
-        <li>One God in three Persons</li>
-        <li>Father, Son, and Holy Spirit</li>
-        <li>Co-equal, co-eternal, consubstantial</li>
-      </ul>
-    </section>
+  <p>
+    Each Person of the Trinity is distinct, yet they share the same essence,
+    working in unity throughout creation, redemption, and guidance.
+  </p>
 
-    <section aria-labelledby="biblical-basis">
-      <h2 id="biblical-basis">Biblical Basis</h2>
-      <p>
-        Add key references or a short list of passages you want to highlight.
-      </p>
-    </section>
+  <!-- Add any additional content you want below -->
+  <section>
+    <h3>The Three Persons</h3>
+    <ul>
+      <li><strong>God the Father</strong> — Creator of all things.</li>
+      <li><strong>God the Son</strong> — Jesus Christ, saviour and Redeemer.</li>
+      <li><strong>God the Holy Spirit</strong> — The helper, counsellor, and guide.</li>
+    </ul>
+  </section>
 
-    <section aria-labelledby="history">
-      <h2 id="history">Historical Notes</h2>
-      <p>
-        Brief historical context (councils, creeds, or influential theoHoly Trinityians), if you want it here.
-      </p>
-    </section>
+  <section>
+    <h3>Key Belief</h3>
+    <p>
+      Christians believe the Trinity shows God’s love and unity, expressed in
+      different ways but always connected as one.
+    </p>
+  </section>
+</main>
 
-    <!-- You wanted a Holy Trinity on the page as well -->
-    <section aria-labelledby="changeHoly Trinity">
-      <h2 id="changeHoly Trinity">Change Holy Trinity</h2>
-      <table role="table" aria-describedby="changeHoly Trinity-caption">
-        <caption id="changeHoly Trinity-caption" class="sr-only">ChronoHoly Trinityical list of updates</caption>
-        <thead>
-          <tr>
-            <th scope="col">Date</th>
-            <th scope="col">Change</th>
-            <th scope="col">Type</th>
-            <th scope="col">By</th>
-          </tr>
-        </thead>
-        <tbody>
-          <!-- Copy a row to add new entries -->
-          <tr>
-            <td>2025-11-12</td>
-            <td>Created Holy Trinity page with matching site formatting.</td>
-            <td><span class="tag">Docs</span></td>
-            <td>your-name</td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
+<!-- FOOTER (exact same as home page) -->
+<footer>
+  <div class="container">
+    <p>&copy; 2025 KGen. All rights reserved.</p>
+  </div>
+</footer>
 
-    <section aria-labelledby="contact">
-      <h2 id="contact">Contact</h2>
-      <p>Email: <a href="mailto:hello@example.com">hello@example.com</a></p>
-    </section>
-  </main>
-
- <footer><div class="container">© <span id="year"></span> KGen</div></footer>
-    <div class="container">
-      <small>© <span id="year"></span> KGen. All rights reserved.</small>
-    </div>
-    <script>
-      // Keep your usual footer script(s)
-      document.getElementById('year').textContent = new Date().getFullYear();
-    </script>
-  </footer>
 </body>
 </html>
-
