--- a/holy-trinity.html
+++ b/holy-trinity.html
@@ -9,18 +9,18 @@
 </head>
 <body>
 
-<!-- HEADER (exact same as home page) -->
-<header>
   <div class="container">
-    <h1>KGen</h1>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="products.html">Products</a>
-      <a href="holy-trinity.html" aria-current="page">Holy Trinity</a>
+      <div class="brand"><div class="logo" aria-hidden="true">🎓</div> <span>KGen</span></div>
+      <div class="nav-links">
+        <a href="index.html">Home</a>
+        <a href="products.html">Products</a>
+        <a href="/log.html">Log</a>
+      </div>
     </nav>
   </div>
 </header>
-
+  
 <!-- MAIN CONTENT (this is the ONLY part that is different) -->
 <main class="container">
   <h2>Holy Trinity</h2>
