--- a/holy-trinity.html
+++ b/holy-trinity.html
@@ -15,7 +15,7 @@
       <div class="nav-links">
         <a href="index.html">Home</a>
         <a href="products.html">Products</a>
-        <a href="/log.html">Log</a>
+      <a href="holy-trinity.html">Holy Trinity</a>
       </div>
     </nav>
   </div>
